final adjustment and deployment configurations